# algorithms_cpp

./: .gitignore  CMakeLists.txt  README.md  build_and_test.sh
src/: CMakeLists.txt  minimum.cpp  minimum.h  search.cpp  search.h  sets.cpp  sets.h  simple_math.cpp  sort.cpp  sort.h
tests/: CMakeLists.txt  test_minimum.cpp  test_search.cpp  test_sets.cpp  test_simple_math.cpp  test_sort.cpp
